# mcp-yandex-search-api

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.cursor/: mcp.json
src/mcp_yandex_search_api/: __init__.py  server.py
