[project]
name = "mcp-yandex-search-api"
version = "0.1.0"
description = "MCP server for Yandex Search API — image search by text query"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "gnemchin" }]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-yandex-search-api = "mcp_yandex_search_api.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_yandex_search_api"]
